# dpgen-lsp

./: .gitignore  CHANGELOG.md  Makefile  README.md  index.md  log.md  lsp-capabilities.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
diagnostics/: diagnostic-engine-v1.schema.json
docs/: LLM-WIKI-PLAN.md  VERSIONED_PIPELINE.md
raw/assets/: dpgen-official-docs.json  dpgen-version-index.json  manifest.json  source-provenance.json
reports/: docstring-wiki-raw-traceability.json
scripts/: check_docstring_traceability.py  download_templates.py  smoke_wheel.sh  update_official_pipeline.py
src/dpgen_lsp/: __init__.py  agent_lsp.py  agent_operations.py  constants.py  registry.py  rich_diagnostics.py  server.py  tool.py
src/dpgen_lsp/features/: code_actions.py  completion.py  cross_artifact.py  diagnostic.py  formatting.py  hover.py  lint.py  log_parser.py  output_logs.py  typecheck.py
src/dpgen_lsp/handlers/: code_action.py  completion.py  definition.py  diagnostic.py  document_symbol.py  hover.py  json_utils.py  references.py  rename.py  text_utils.py
src/dpgen_lsp/schema/: dpgen_rules.json  json_path.py  loader.py  official_rules.py  versioning.py
src/dpgen_lsp/templates/: NOTICE  __init__.py  index.json
src/dpgen_lsp/templates/machine/: local-shell.json  lsf.json  pbs.json  slurm.json  ssh-remote.json
src/dpgen_lsp/templates/param/: init-bulk-abacus.json  init-bulk-vasp.json  init-reaction.json  init-surf-vasp.json  lammps-cpx.json  lammps-custom.json  lammps-pwmat.json  lammps-siesta.json  simplify-none.json  simplify-vasp.json
src/dpgen_lsp/wiki/concepts/: fp_engines.md  machine_types.md  model_deviation.md  workflows.md
src/dpgen_lsp/wiki/entities/: fp_task_limits.md  mass_map.md  numb_models.md  training_param.md  trust_levels.md
src/dpgen_lsp/wiki/synthesis/: machine_selection.md  troubleshooting.md  workflow_selection.md
tests/: test_completion.py  test_cross_artifact.py  test_diagnostic.py  test_docstring_traceability.py  test_hover.py  test_init.py  test_json_path.py  test_lint.py  test_loader.py  test_lsp_handlers.py  test_official_pipeline.py  test_openqc_smoke.py  test_output_logs.py  test_release_metadata.py  test_runtime_logs.py  test_server_cli.py
tests/fixtures/invalid/: machine.json  param.json  param_bad_version_and_mass_map.json
tests/fixtures/projects/cross-mismatch/: machine.json  param.json
tests/fixtures/projects/valid-run/: machine.json
tests/fixtures/valid/: machine.json  param.json
wiki/concepts/: official-docs-pipeline.md
wiki/entities/: machine-json.md  param-json.md
wiki/synthesis/: openqc-agent-context.md
