[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpgen-lsp"
version = "0.0.1"
description = "Language Server Protocol and CLI toolkit for DP-GEN input files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "SchrodingersCattt"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
keywords = ["dpgen", "deepmd", "lsp", "language-server", "molecular-dynamics"]
dependencies = [
    "pygls>=1.2.0",
    "lsprotocol>=2023.0.0",
]

[project.urls]
Homepage = "https://github.com/SchrodingersCattt/dpgen-lsp"
Repository = "https://github.com/SchrodingersCattt/dpgen-lsp"
Issues = "https://github.com/SchrodingersCattt/dpgen-lsp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
dpgen-lsp = "dpgen_lsp.server:main"
dpgen-lsp-tool = "dpgen_lsp.tool:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dpgen_lsp"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/dpgen_lsp --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
    "..."
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
