[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpgen-lsp"
version = "0.1.2"
description = "Language Server Protocol and CLI toolkit for DP-GEN input files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SchrodingersCattt"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
keywords = ["dpgen", "deepmd", "lsp", "language-server", "molecular-dynamics"]
dependencies = [
    "pygls>=1.2.0",
    "lsprotocol>=2023.0.0",
]

[project.urls]
Homepage = "https://github.com/newtontech/dpgen-lsp"
Repository = "https://github.com/newtontech/dpgen-lsp"
Issues = "https://github.com/newtontech/dpgen-lsp/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0,<2",
]

[project.scripts]
dpgen-lsp = "dpgen_lsp.server:main"
dpgen-lsp-tool = "dpgen_lsp.tool:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dpgen_lsp"]

[tool.hatch.build.targets.wheel.force-include]
"lsp-capabilities.json" = "dpgen_lsp/lsp-capabilities.json"
"diagnostics/diagnostic-engine-v1.schema.json" = "dpgen_lsp/diagnostic-engine-v1.schema.json"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/dpgen_lsp --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
    "^\\s*\\.\\.\\.\\s*$"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
